--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
 	<title>我的主页</title>
 </head>
 <body>
-	<div class="row">
-                <p>欢迎来到我的主页！</p>
-                <p>以下是所有项目：</p>
-                <table style="border: 1px solid black;">
-                        <tr>
-                                <th scope="row">体测计算器</th>
-                                <td><a href="https://jjpp-github.github.io/ptc/">https://jjpp-github.github.io/ptc</a></td>
-                        </tr>
-                </table>
+        <p>欢迎来到我的主页！</p>
+        <p>以下是所有项目：</p>
+	<div class="tab">
+                <a href="https://jjpp-github.github.io/ptc/" style="display: block;border: 10px solid black;">体测计算器</a></td>
         </div>
     </div>
 </body>
