--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>欢迎来到我的主页！</p>
         <p>以下是所有项目：</p>
 	<div class="tab">
-                //<a href="https://jjpp-github.github.io/ptc/" style="display: block;border: 1px solid black;">体测计算器</a>
+                <!--<a href="https://jjpp-github.github.io/ptc/" style="display: block;border: 1px solid black;">体测计算器</a>-->
 		<a href="https://jjpp-github.github.io/ptc/">体测计算器</a>
         </div>
     </div>
