--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
                 <!--<a href="https://jjpp-github.github.io/ptc/" style="display: block;border: 1px solid black;">体测计算器</a>-->
 		<a href="https://jjpp-github.github.io/ptc/">体测计算器</a>
         </div>
+	<div class="tab">
+                <!--<a href="https://jjpp-github.github.io/morse/" style="display: block;border: 1px solid black;">体测计算器</a>-->
+		<a href="https://jjpp-github.github.io/ptc/">摩尔斯代码转换器</a>
+        </div>
     </div>
 </body>
 </html>
